--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "heroku-postbuild": "cd reactapp && npm install && npm run build",
+    "dev": "nodemon ./bin/www"
   },
   "dependencies": {
     "bcrypt": "^5.0.0",
@@ -14,6 +16,7 @@
     "http-errors": "~1.6.3",
     "mongoose": "^5.8.11",
     "morgan": "~1.9.1",
+    "nodemon": "^2.0.19",
     "uid2": "0.0.3"
   }
 }
